flatris/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: service-flatris
  labels:
    app: flatris
spec:
  ports:
    - name: port
      port: 80
      protocol: TCP
      targetPort: 3000
  selector:
    app: flatris
